Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     ],
     "homepage": "https://github.com/YerTX2/StarCore-Bot",
     "author": {
-        "name": "FzTeis"
+        "name": "YerTX2"
     },
     "repository": {
         "type": "git",
