Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
         "whatsapp",
         "js-whatsapp",
         "whatsapp",
-        "Sylph-bot",
-        "Sylph",
+        "StarCore-bot",
+        "StarCore",
         "multi-device",
-        "Sylphiette",
+        "StarCore",
         "baileys-md"
     ],
     "homepage": "https://github.com/YerTX2/StarCore-Bot",
